bug with list overflow

--- a/Authink.Web/Assets/Style/home.css
+++ b/Authink.Web/Assets/Style/home.css
@@ -228,9 +228,11 @@ textarea {
 }
     #main-tests {
         width: 426px;
+        min-height:500px;
         float: left;
         border-right: 5px solid #ececec;
         background: #f8f8f8;
+        position:relative;
     }
 
         #main-tests-heading {
@@ -266,7 +268,9 @@ textarea {
             }
             /**/
         #main-tests-list {
-
+            max-height: 500px;
+            overflow-y: scroll;
+            overflow-x: hidden;
         }
 
             .main-tests-list-item {
@@ -316,6 +320,9 @@ textarea {
 
         #main-tests-options {
             padding: 10px;
+            position: absolute;
+            left: 0;
+            right: 0;
         }
 
             #main-tests-option-add-new {
